Knowledge-Board/src/main/java/com/example/knowledgeboard/global/error/exception/BusinessException.java
package com.example.knowledgeboard.global.error.exception;

import com.example.knowledgeboard.global.error.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

}